container overflow fixed

--- a/assets/stylesheets/_home.scss
+++ b/assets/stylesheets/_home.scss
@@ -6,7 +6,7 @@
 .venues-container {
   height: 100%;
   // background-color: orange;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .map-box {
@@ -16,6 +16,7 @@
 }
 
 .home-desktop {
+  max-width: 100vw !important;
   height: 100%;
   display: flex;
   .venues-container {
