--- a/assets/stylesheets/_venueslist.scss
+++ b/assets/stylesheets/_venueslist.scss
@@ -137,6 +137,12 @@
   color: $pink;
 }
 
+@media (min-width: 1200px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl {
+      max-width: 1060px !important;
+  }
+}
+
 
 .loader {
   height: 100%;
